--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "element-ui": "^2.15.14",
+    "express": "^5.1.0",
     "mysql2": "^3.14.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
