--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3"
