--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "tencentcloud-sdk-nodejs": "^4.1.61"
   },
   "browserslist": [
     "> 1%",
